--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ AddDefaultCharset UTF-8
 Options -Indexes
 
 RewriteCond %{HTTP:HTTPS} !=on [NC]
-RewriteRule ^(.*)$ https://3side.github.io/$1 [R=301,L]
+RewriteRule ^(.*)$ https://community-third-party.github.io//$1 [R=301,L]
 SetEnvIf X-Forwarded-Proto https HTTPS=on
 
 RewriteCond %{HTTP_USER_AGENT} wget [NC]
