fix: fixed jekyll
fix: Обновлены стили оформления сайта
add: Добавлен раздел проектов
fix: Мелкие изменения в теме оформления
fix: Мелкие исправления в тексте

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Сообщество Третья Сторона
-description: 
+description: Сайт поддержки проектов сообщества Третья Сторона
 author: like
 copyright: third-party
 keywords: third-party
